# glyfi

./: .gitignore  .gitmodules  Cargo.toml  README.md  TODO.md  build.sh
lib/: sql_defs.rs
src/: commands.rs  core.rs  events.rs  main.rs  server_data.rs  sql.rs
src/bot/: commands.rs  core.rs  main.rs  sql.rs
src/init/: init_db.rs
