[package]
name = "glyfi"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "glyfi"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4.31", features = ["alloc"] }
clap = { version = "4.4.11", features = ["derive", "color", "help", "usage", "error-context", "suggestions", "unicode", "wrap_help"] }
const_format = "0.2.32"
ctrlc = { version = "3.4.1", features = ["termination"] }
once_cell = "1.19.0"
poise = "0.6.1-rc1"
serde_json = "1.0.108"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros", "process"] }
